# discord-knowledge-agent

./: .gitignore  PROJECT_PLAN.md  docker-compose.yml  pyproject.toml
docker/: init.sql
src/discord_knowledge_agent/: __init__.py  cli.py  config.py  models.py
src/discord_knowledge_agent/export/: __init__.py  local_md.py
src/discord_knowledge_agent/index/: embeddings.py  vector_store.py
src/discord_knowledge_agent/ingest/: __init__.py  discord_export.py
src/discord_knowledge_agent/organize/: __init__.py  category_labels.py  heuristic_categorizer.py
src/discord_knowledge_agent/pipelines/: __init__.py  export.py  index.py  ingest.py  organize.py
src/discord_knowledge_agent/storage/: __init__.py  postgres.py  sqlite.py
tests/unit/ingest/: test_discord_export.py
